Made some improvements, beta 1